Last part missing recsys (but still errors)

--- a/ix-lab3/lab3-recsys.ipynb
+++ b/ix-lab3/lab3-recsys.ipynb
@@ -268,7 +268,7 @@
     "collapsed": true
    },
    "source": [
-    "Users have much more ratings than items. Thus items tend to be sparse."
+    "Users have much more ratings than items. Thus items tend to be sparse (but users are also kind of sparse)."
    ]
   },
   {
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The predicted ratings are better than the ones we obtained with the previous method, since the error is lower."
+    "In our case, these predicted ratings are not really better than the ones we get earlier."
    ]
   },
   {
@@ -629,6 +629,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This case is even worse. The lambda parameter is too high to provide an accurate result. There exists a good range of lambda to choose to obtain minimal error values (see the graph below)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -641,28 +648,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(recommendation_error(0.01))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The lambda parameter become too high to provide an accurate result. There exists a good range of lambda to choose to obtain minimal error values (see the graph below)."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Find the value of lambda_ that minimizes the validation error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We choose the value of lambda whose error is the smallest. "
    ]
   },
   {
@@ -716,6 +712,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "ROBIIIIIIIIIIIIIN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -723,8 +728,7 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"REGARDER GRAPH\"\"\"\n",
-    "best_lambda = 0.01;"
+    "best_lambda = 0.01"
    ]
   },
   {
@@ -959,9 +963,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
