very little changes dimred

--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -99,20 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'data' is not defined",
+     "evalue": "name 'n_tags' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-1f971b5d277d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mrelevance_array\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_tags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_movies\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoLocalIterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mrelevance_array\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"tagId\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"movieId\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"relevance\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+      "\u001b[1;32m<ipython-input-2-462d38086c55>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrelevance_array\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_tags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_movies\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoLocalIterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m# we substract 1 from each index, to avoid the forst row / colon being empty,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m# as the ids start at 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'n_tags' is not defined"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -308,6 +308,17 @@
      "text": [
       "to capture 2/3 of the variability you need 3 principal directions\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([  4.34212328e-06,   6.21518208e-06,   9.59376347e-06, ...,\n",
+       "         7.89379090e-02,   1.58003057e-01,   1.94100474e+00])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -325,7 +336,66 @@
     "    s += rel_eigvals[n_eigvals-count-1]\n",
     "    count += 1\n",
     "\n",
-    "print(\"to capture 2/3 of the variability you need\", count, \"principal directions\")"
+    "print(\"to capture 2/3 of the variability you need\", count, \"principal directions\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.00055387, -0.01099166, -0.00068956, ...,  0.01646465,\n",
+       "       -0.00604736, -0.00569566])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idx = np.argsort(rel_eigvals)[::-1]\n",
+    "rel_eigvecs[idx[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  2.03008778e-03,  -5.32915892e-03,   6.26517576e-03, ...,\n",
+       "          9.34609371e-05,  -1.47096872e-02,  -8.50946400e-03],\n",
+       "       [ -7.86185349e-04,  -3.03027607e-03,   3.47148189e-03, ...,\n",
+       "         -1.16982616e-03,  -1.26061321e-02,  -8.43253234e-03],\n",
+       "       [  4.42466246e-04,  -1.04162319e-03,   3.77111792e-04, ...,\n",
+       "         -2.37509339e-02,   7.92737973e-03,  -1.37846464e-02],\n",
+       "       ..., \n",
+       "       [  9.68470898e-04,  -5.15549464e-04,   2.64680404e-03, ...,\n",
+       "         -3.00220933e-02,   1.34275188e-02,  -9.59185602e-03],\n",
+       "       [ -2.20813643e-03,   1.51579872e-02,   4.32909499e-03, ...,\n",
+       "          3.95679381e-02,  -2.58014182e-02,  -2.04976955e-02],\n",
+       "       [  5.53869676e-04,  -1.09916649e-02,  -6.89562524e-04, ...,\n",
+       "          1.64646487e-02,  -6.04735607e-03,  -5.69565527e-03]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rel_eigvecs = rel_eigvecs[:,idx]\n",
+    "rel_eigvecs"
    ]
   },
   {
@@ -368,7 +438,7 @@
     "def getTagName(i):\n",
     "    return tags.filter(lambda x: x[\"tagId\"] == i+1).take(1)[0][\"tag\"]\n",
     "\n",
-    "# print the names from a list of tag indeces\n",
+    "# print the names from a list of tag indices\n",
     "def printTags(l, dir):\n",
     "    for i in l:\n",
     "        print(\"   \", dir[i], \":\", getTagName(i))"
@@ -1041,9 +1111,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
