little comments for dimred

--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -49,8 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Construct the data matrix\n",
-    "Using PySpark on the cluster, create the array containing all the ratings from `genome-scores.txt`"
+    "### Construct the data matrix using PySpark on the cluster, create the array containing all the ratings from `genome-scores.txt`"
    ]
   },
   {
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -290,14 +289,16 @@
     "### Explain the implications for dimensionality reduction.\n",
     "\n",
     "Most eigenvalues are very small (between $10^{-5}$ and $10^{-3}$), with very few large values. <br>\n",
-    "Since the dimensionality of the data is carried by the eigenvalues, this means that few eigenvalues are required to keep a significant portion of the variability. For example:\n",
+    "Since the dimensionality of the data is carried by the eigenvalues, this means that few eigenvalues are required to keep a significant portion of the variability (large eigenvalues capture a large part of the values).\n",
+    "\n",
+    "For example:\n",
     "\n",
     "**How many principal directions do you need to capture $2 \\over 3$ of the variability in the data?**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -308,17 +309,6 @@
      "text": [
       "to capture 2/3 of the variability you need 3 principal directions\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([  4.34212328e-06,   6.21518208e-06,   9.59376347e-06, ...,\n",
-       "         7.89379090e-02,   1.58003057e-01,   1.94100474e+00])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -340,65 +330,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.00055387, -0.01099166, -0.00068956, ...,  0.01646465,\n",
-       "       -0.00604736, -0.00569566])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "idx = np.argsort(rel_eigvals)[::-1]\n",
-    "rel_eigvecs[idx[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  2.03008778e-03,  -5.32915892e-03,   6.26517576e-03, ...,\n",
-       "          9.34609371e-05,  -1.47096872e-02,  -8.50946400e-03],\n",
-       "       [ -7.86185349e-04,  -3.03027607e-03,   3.47148189e-03, ...,\n",
-       "         -1.16982616e-03,  -1.26061321e-02,  -8.43253234e-03],\n",
-       "       [  4.42466246e-04,  -1.04162319e-03,   3.77111792e-04, ...,\n",
-       "         -2.37509339e-02,   7.92737973e-03,  -1.37846464e-02],\n",
-       "       ..., \n",
-       "       [  9.68470898e-04,  -5.15549464e-04,   2.64680404e-03, ...,\n",
-       "         -3.00220933e-02,   1.34275188e-02,  -9.59185602e-03],\n",
-       "       [ -2.20813643e-03,   1.51579872e-02,   4.32909499e-03, ...,\n",
-       "          3.95679381e-02,  -2.58014182e-02,  -2.04976955e-02],\n",
-       "       [  5.53869676e-04,  -1.09916649e-02,  -6.89562524e-04, ...,\n",
-       "          1.64646487e-02,  -6.04735607e-03,  -5.69565527e-03]])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rel_eigvecs = rel_eigvecs[:,idx]\n",
-    "rel_eigvecs"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -414,13 +345,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# first 5 principle directions\n",
+    "# first 5 principal directions, which are the eigenvectors whose eigenvalues are the largest\n",
     "rel_dirs = []\n",
     "for i in range(5):\n",
     "    rel_dirs.append(rel_cov @ rel_eigvecs[-i-1])"
@@ -613,14 +544,16 @@
    "source": [
     "### What concepts would you use to describe these dimensions?\n",
     "\n",
-    "The first direction has high values for tags including story, original, whereas most tags in the bottom 10 are about war. "
+    "The first direction has high values for tags including story, original, whereas most tags in the bottom 10 are about war. \n",
+    "\n",
+    "One might note that the first and the fifth top10 and bottom10 tags are reversed. Also, the \"good\" word is mainly situated in the top 10 tags."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a dict which maps every tag to it's coordinates in the first 5 principal directions"
+    "### Create a dict which maps every tag to it's coordinates in the first 5 principal directions"
    ]
   },
   {
@@ -677,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create an interactive plot that displays the 2D-projection of the movies using bokeh and its hover tool. Color the nodes by their Rotten Tomatoes score."
+    "### Create an interactive plot that displays the 2D-projection of the movies using bokeh and its hover tool. "
    ]
   },
   {
