dimred : concept comment

--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -544,9 +544,7 @@
    "source": [
     "### What concepts would you use to describe these dimensions?\n",
     "\n",
-    "The first direction has high values for tags including story, original, whereas most tags in the bottom 10 are about war. \n",
-    "\n",
-    "One might note that the first and the fifth top10 and bottom10 tags are reversed. Also, the \"good\" word is mainly situated in the top 10 tags."
+    "These principal direction contain most of the typical description for movies. It is mainly formed with opinions of people about the whole film, acting, soundtacks, ending, etc... The last principal component seems to be more centered on different themes (ie. Iraq War) or on popular figures (ie. James Bond)."
    ]
   },
   {
